* Improvements to count and sum anomaly detection for sparse data. This primarily
aims to improve handling of data which are predictably present: detecting when they
are unexpectedly missing. (See {ml-pull}721[#721].)
* Trap numeric errors causing bad hyperparameter search initialisation and repeated
errors to be logged during boosted tree training. (See {ml-pull}732[#732].)

== {es} version 7.4.1

=== Enhancements

* The {ml} native processes are now arranged in a .app directory structure on
  macOS, to allow for notarization on macOS Catalina. (See {ml-pull}593[#593].)

=== Bug Fixes

* A reference to a temporary variable was causing forecast model restoration to fail.
The bug exhibited itself on MacOS builds with versions of clangd > 10.0.0. (See {ml-pull}688[#688].)

== {es} version 7.4.0

=== Bug Fixes

* Rename outlier detection method values knn and tnn to distance_kth_nn and distance_knn
respectively to match the API. (See {ml-pull}598[#598].)
* Fix occasional (non-deterministic) reinitialisation of modelling for the lat_long
function. (See {ml-pull}641[#641].)

== {es} version 7.3.1

=== Bug Fixes

* Only trap the case that more rows are supplied to outlier detection than expected.
Previously, if rows were excluded from the data frame after supplying the row count
in the configuration then we detected the inconsistency and failed outlier detection.
However, this legitimately happens in case where the field values are non-numeric or
array valued. (See {ml-pull}569[#569].)

== {es} version 7.3.0

=== Enhancements

* Upgrade to a newer version of the Apache Portable Runtime library. (See {ml-pull}495[#495].)
* Improve stability of modelling around change points. (See {ml-pull}496[#496].)

=== Bug Fixes

* Reduce false positives associated with the multi-bucket feature. (See {ml-pull}491[#491].)
* Reduce false positives for sum and count functions on sparse data. (See {ml-pull}492[#492].)

== {es} version 7.2.1

=== Bug Fixes
